# zipapp

./: .gitignore  CMakeLists.txt
src/: main.cpp
